tests/baselines/reference/numericNamedPropertyDuplicates.errors.txt
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/numericNamedPropertyDuplicates.ts(20,5): error TS1005: ',' expected.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/numericNamedPropertyDuplicates.ts(2,5): error TS2300: Duplicate identifier '1'.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/numericNamedPropertyDuplicates.ts(3,5): error TS2300: Duplicate identifier '1.0'.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/numericNamedPropertyDuplicates.ts(4,12): error TS2300: Duplicate identifier '2'.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/numericNamedPropertyDuplicates.ts(5,12): error TS2300: Duplicate identifier '2'.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/numericNamedPropertyDuplicates.ts(9,5): error TS2300: Duplicate identifier '2'.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/numericNamedPropertyDuplicates.ts(10,5): error TS2300: Duplicate identifier '2.'.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/numericNamedPropertyDuplicates.ts(14,5): error TS2300: Duplicate identifier '1'.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/numericNamedPropertyDuplicates.ts(15,5): error TS2300: Duplicate identifier '1'.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/numericNamedPropertyDuplicates.ts(19,5): error TS2300: Duplicate identifier '2'.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/numericNamedPropertyDuplicates.ts(20,5): error TS2300: Duplicate identifier '2'.


==== tests/cases/conformance/types/objectTypeLiteral/propertySignatures/numericNamedPropertyDuplicates.ts (11 errors) ====
    class C {
        1: number;
        ~
!!! error TS2300: Duplicate identifier '1'.
        1.0: number;
        ~~~
!!! error TS2300: Duplicate identifier '1.0'.
        static 2: number;
               ~
!!! error TS2300: Duplicate identifier '2'.
        static 2: number;
               ~
!!! error TS2300: Duplicate identifier '2'.
    }
    
    interface I {
        2: number;
        ~
!!! error TS2300: Duplicate identifier '2'.
        2.: number;
        ~~
!!! error TS2300: Duplicate identifier '2.'.
    }
    
    var a: {
        1: number;
        ~
!!! error TS2300: Duplicate identifier '1'.
        1: number;
        ~
!!! error TS2300: Duplicate identifier '1'.
    }
    
    var b = {
        2: 1
        ~
!!! error TS2300: Duplicate identifier '2'.
        2: 1
        ~
!!! error TS1005: ',' expected.
        ~
!!! error TS2300: Duplicate identifier '2'.
    }